# apushka

./: Dockerfile  data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apushka/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
rent_house/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
rent_house/migrations/: 0001_initial.py  0002_alter_herotext_text.py  0003_alter_herotext_text.py  0004_aboutsection.py  0005_alter_aboutsection_additional_title.py  0006_aboutcard.py  0007_portfoliosection.py  0008_remove_portfoliosection_text.py  0009_album_alter_portfoliosection_options_photo.py  0010_delete_aboutsection_delete_portfoliosection.py  0011_alter_aboutcard_options_alter_album_options.py  0012_withuscard_album_is_active_album_is_published_and_more.py  0013_alter_album_options_remove_album_is_active_and_more.py  0014_album_is_active.py  0015_alter_withuscard_description_alter_withuscard_link.py  0016_alter_album_options_rename_photo_herotext_image.py
rent_house/utils/: image_utils.py
static/css/: main.css
templates/: base.html  dev.html  index.html
templates/includes/: about.html  call.html  comments.html  contacts.html  faq.html  footer.html  gallery.html  herotext.html  navmenu.html  price.html  with_us.html
wheelhouse/: django_imagefit-0.8.1-py3-none-any.whl  django_imagekit-5.0.0-py3-none-any.whl  pilkit-3.0-py3-none-any.whl
